@@ -45,8 +45,15 @@ gfxn0/Debug/Main/MetricTest                                        1221.75
 gfxn0/Debug/MatrixCompareTest/IsEqualTest                          3.80046
 gfxn0/Debug/MatrixCompareTest/OpEqualityTest                       2.05208
 gfxn0/Debug/MatrixCompareTest/OpNotEqualityTest                    2.15451
+gfxn0/Debug/MatrixGenTest/MakeRot33ByRef                           0.70935
+gfxn0/Debug/MatrixGenTest/MakeRot33ByVal                           1.42643
+gfxn0/Debug/MatrixGenTest/MakeRot34ByRef                           0.80528
+gfxn0/Debug/MatrixGenTest/MakeRot34ByVal                           1.64481
+gfxn0/Debug/MatrixGenTest/MakeRot44ByRef                           0.92025
+gfxn0/Debug/MatrixGenTest/MakeRot44ByVal                           2.0304
 gfxn0/Debug/MatrixOpsTest/Add44                                    1.23436
 gfxn0/Debug/MatrixOpsTest/Mult44                                   6.20366
+gfxn0/Debug/MatrixOpsTest/Mult44operatorStar                       7.26933
 gfxn0/Debug/MatrixOpsTest/Sub44                                    1.2305
 gfxn0/Debug/MatrixOpsTest/TransposeTest                            0.896155
 gfxn0/Debug/MatrixTest/ConstructorOverhead                         2.82155
@@ -57,6 +64,14 @@ gfxn0/Debug/MatrixTest/OpEqualOverhead                             0.311412
 gfxn0/Debug/MatrixTest/OpParenOverhead                             0.137483
 gfxn0/Debug/MatrixTest/SetOverhead                                 0.24604
 gfxn0/Debug/MatrixTest/SetPtrOverhead                              0.704867
+gfxn0/Debug/PlaneTest/CopyConstructOverhead                        0.0864825
+gfxn0/Debug/PlaneTest/DefaultCreationOverhead                      0.0672975
+gfxn0/Debug/PlaneTest/EqualityCompareOverhead                      0.166155
+gfxn0/Debug/PlaneTest/InequalityCompareOverhead                    0.164525
+gfxn0/Debug/PlaneTest/NormOffsetCreationOverhead                   0.0888325
+gfxn0/Debug/PlaneTest/NormPtCreationOverhead                       0.303055
+gfxn0/Debug/PlaneTest/ThreePtCreationOverhead                      1.61749
+gfxn0/Debug/PlaneTest/isEqualOverhead                              0.684995
 gfxn0/Debug/PointTest/ConstructorsOverhead                         0.229405
 gfxn0/Debug/PointTest/CopyConstructOverhead                        0.250337
 gfxn0/Debug/PointTest/EqualityCompareOverhead                      0.218817
@@ -88,6 +103,7 @@ gfxn0/Debug/SphereTest/isEqualOverhead                             0.550122
 gfxn0/Debug/SphereTest/isInVolumePointOverhead                     0.59009
 gfxn0/Debug/SphereTest/isInVolumeSphereOverhead                    0.598245
 gfxn0/Debug/SphereTest/isOnVolumeOverhead                          1.18044
+gfxn0/Debug/SphereTest/makeVolumePointOverhead                     59.4414
 gfxn0/Debug/TriTest/CenterOverhead                                 1.05624
 gfxn0/Debug/TriTest/ConstructorsOverhead                           0.468865
 gfxn0/Debug/TriTest/CopyConstructOverhead                          0.388505
